# developing

./: README.md
server/: Makefile  Readme.me  aa.sh  app  bb.sh  config.json  mysql.sh  restart.sh  test.sh
server/include/: global.h
server/include/jwt/: se_token.h
server/src/: main.cpp
server/src/http_server/: connection.cpp  connection.hpp  http_server.cpp  http_server.hpp  mime_types.cpp  reply.cpp  reply.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp
server/src/https_server/: https_examples.cpp
server/src/json/: json_main_test.cpp  json_value.cpp
server/src/jwt_token/: se_token.cpp
server/src/mysql/: MySql.cpp  MySql.hpp  mysql_main_test.cpp
server/src/web_socket/: network_interface.cpp  network_interface.h  web_socket_main_test.cpp  websocket_handler.cpp  websocket_handler.h  websocket_request.cpp  websocket_request.h  websocket_respond.cpp  websocket_respond.h
server/src/ws_socket/: network_interface.cpp  sha.cpp  websocket_handler.cpp  websocket_request.cpp  websocket_respond.cpp
server/src/wss_socket/: wss_examples.cpp
server/test_modules/iotkit/libtar/: CMakeLists.txt  Doxyfile  README.md  build.properties
server/test_modules/iotkit/libtar/include/: myapi.h
server/test_modules/iotkit/libtar/lib/: handle.c
server/test_modules/iotkit/libtar/src/: myapi.cpp
server/test_modules/iotkit/otacli/: CMakeLists.txt  Doxyfile  README.md  build.properties  build.properties.local  dep_linux_centos_gcc-4.8.5.tmp
server/test_modules/iotkit/otacli/built/: CMakeCache.txt  Makefile  cmake_install.cmake
server/test_modules/iotkit/otacli/built/test/: Makefile  cmake_install.cmake
server/test_modules/iotkit/otacli/cmake/: hobot_util.cmake
server/test_modules/iotkit/otacli/include/otacli/: hobot_utils.h  http_client.h  ota_client.h
server/test_modules/iotkit/otacli/jni/: CMakeLists.txt  pri.key  pub.key
server/test_modules/iotkit/otacli/jni/com/hobot/otacli/: OTACli.java
server/test_modules/iotkit/otacli/jni/jni/: com_hobot_otacli_OTACli.cpp  com_hobot_otacli_OTACli.h  wrapper_otacli.cpp  wrapper_otacli.h
server/test_modules/iotkit/otacli/src/: hobot_utils.cpp  http_client.cpp  ota_client.cpp
server/test_modules/iotkit/otacli/test/: CMakeLists.txt  test.cpp
server/test_modules/token_sign/: appcar_client  pri.key  pub.key  tenant_token.pem  token.data
server/test_modules/token_sign/include/: carmsg.pb.h  carmsg.proto
server/test_modules/token_sign/include/json/: json.h
server/test_modules/token_sign/include/otacli/: ota_client.h  ota_typedef.h
server/test_modules/token_sign/src/: carmsg.pb.cpp  hobot_utils.cpp  http_client.cpp  main.cpp  ota_client.cpp
server/test_modules/token_sign/test/: Makefile
server/test_modules/token_sign/test/src/: main.cpp
server/test_modules/web_socket/: Makefile  appcar_client  rsa_private_key.pem  rsa_public_key.pem  tenant_token.pem
server/test_modules/web_socket/include/: http_client.h  nebula_client.h  sign_token.h
server/test_modules/web_socket/src/: car_client.cpp  easywsclient.cpp  http_client.cpp  nebula_client.cpp  sign_token.cpp
server/test_modules/wssserver/wss-demo/: CMakeLists.txt  client_ws.hpp  wss_client.cpp  wss_examples.cpp
server/www/: 3d-rotation.html  3dearth.html  databases.html  flash.html  girlSwing.html  index.html  jstest.html  login.html  map.html  playlist.xml  radar.html  register.html  timerCount.html  user_info.html  watch.html  watch2.html  watch3.html  watch4.html  water.html  webgl.html
server/www-dd/: databases.html
server/www/asp/: ._car_info.asp
server/www/css/: login_style.css
server/www/js/: watch4.js
server/www/swf/: player.swf
